@@ -1,3 +1,12 @@
+2005-10-28  Derek Price  <derek@ximbiot.com>
+
+	[bug #14840]
+	* zlib.c (compress_bufer_input): Don't assume the number of bytes the
+	caller requested will be available from the stream underlying the
+	compression buffer - the data is compressed and should be shorter by
+	definition.  Improve comment.
+	(Original report from Rahul Bhargava <rahul@wandisco.com>.)
+
 2005-10-18  Derek Price  <derek@ximbiot.com>
 
 	Include "wait.h" only as needed.
